--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
 		steps:
 			- uses: actions/checkout@v2
-			- name: Testing Build pre-Deploy
+			- name: Testing Build Pre-Deploy
 				uses: actions/setup-node@v2
 				with:
 					node-version: ${{ matrix.node-version }}
