--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,8 +41,26 @@ jobs:
 						script: |
 							eval "$(ssh-agent -s)"
 							ssh-add ~/.ssh/senpro-ssh-3
-							cd ~/senpro/456360/modul01/senpro-github-action
-							git restore .
-							git pull origin main
-							npm install
-							npm run build
+							echo "Cek folder project";
+							[ ! -d "/home/seniorproject-rabu/senpro/456360/modul01/senpro-github-action/" ] &&
+								{
+									echo "Repository belum di-clone. Cloning...";
+									mkdir -p ~/senpro/456360/modul01;
+									cd ~/senpro/456360/modul01;
+									git clone git@github.com:aulianurfajriyah/senpro-github-action.git;
+									cd ~/senpro/456360/modul01/senpro-github-action
+									echo "Install Package dan Build Project";
+									npm install;
+									npm run build;
+								} ||
+								{
+									echo "Repository sudah ada. Building...";
+									cd ~/senpro/456360/modul01/senpro-github-action;
+									git restore .;
+									git pull origin main;
+									echo "Install Package dan Build Project";
+									npm install;
+									npm run build;
+								}
+							
+							
