--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
 									mkdir -p ~/senpro/456360/modul01;
 									cd ~/senpro/456360/modul01;
 									git clone git@github.com:aulianurfajriyah/senpro-github-action.git;
-									cd ~/senpro/456360/modul01/senpro-github-action
+									cd ~/senpro/456360/modul01/senpro-github-action;
 									echo "Install Package dan Build Project";
 									npm install;
 									npm run build;
