--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
 									echo "Repository belum di-clone. Cloning...";
 									mkdir -p ~/senpro/456360/modul01;
 									cd ~/senpro/456360/modul01;
-									git clone git@github.com:aulianurfajriyah/senpro-github-action.git;
+									git clone https://github.com/aulianurfajriyah/senpro-github-action.git;
 									cd ~/senpro/456360/modul01/senpro-github-action;
 									echo "Install Package dan Build Project";
 									npm install;
