--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,37 +31,39 @@ jobs:
 					node-version: [16.x]
 
 			steps:
-				- name: Build app on VM
-					uses: appleboy/ssh-action@master
+				- uses: actions/checkout@v2
+				- name: Testing Build pre-Deploy
+					uses: actions/setup-node@v2
 					with:
 						host: ${{ secrets.HOST }}
 						username: ${{ secrets.USERNAME }}
-						password: ${{ secrets.Password }}
+						password: ${{ secrets.PASSWORD }}
 						port: ${{ secrets.PORT }}
 						script: |
-							eval "$(ssh-agent -s)"
+							eval "$(ssh-agent-s)"
 							ssh-add ~/.ssh/senpro-ssh-3
 							echo "Cek folder project";
-							[ ! -d "/home/seniorproject-rabu/senpro/456360/modul01/senpro-github-action/" ] && 
+							[ ! -d "/home/seniorproject-rabu/senpro/460538/modul01/senpro-github-action/" &&
 								{
 									echo "Repository belum di-clone. Cloning...";
-									mkdir -p ~/senpro/456360/modul01;
-									cd ~/senpro/456360/modul01;
-									git clone git@github.com:aulianurfajriyah/senpro-github-action.git;
-									cd ~/senpro/456360/modul01/senpro-github-action;
+									mkdir -p ~/senpro/460538/modul01;
+									cd ~/senpro/460538/modul01;
+									git clone git@https://github.com/aulianurfajriyah/senpro-github-action.git;
+									cd ~/senpro/460538/modul01/senpro-github-action/
 									echo "Install Package dan Build Project";
 									npm install;
 									npm run build;
 								} ||
 								{
 									echo "Repository sudah ada. Building...";
-									cd ~/senpro/456360/modul01/senpro-github-action;
-									git restore .;
+									cd ~/senpro/460538/modul01/senpro-github-action/;
+									git restore;
 									git pull origin main;
 									echo "Install Package dan Build Project";
 									npm install;
 									npm run build;
 								}
+							]
 	
 							
 							
